# Data_Analyst_Portfolio

./: .gitignore  README.md
FMCG_EComerce_Market_Research/: README.md
FMCG_EComerce_Market_Research/01_DataTransform/: ARCHITECTURE.md  REQUIREMENTS.md  SCOPE.md  product_category_filter.xlsx
FMCG_EComerce_Market_Research/01_DataTransform/Text_Classifier/: .gitignore  README.md  pyproject.toml  requirements.txt
FMCG_EComerce_Market_Research/01_DataTransform/Text_Classifier/configs/: base_config.yaml  demo_config.yaml
FMCG_EComerce_Market_Research/01_DataTransform/Text_Classifier/demo/: app.py
FMCG_EComerce_Market_Research/01_DataTransform/Text_Classifier/docs/: MODEL_RECOMMENDATION.md
FMCG_EComerce_Market_Research/01_DataTransform/Text_Classifier/docs/examples/: training_report.example.md
FMCG_EComerce_Market_Research/01_DataTransform/Text_Classifier/helper/: logger_helper.py
FMCG_EComerce_Market_Research/01_DataTransform/Text_Classifier/scripts/: predict.py  prepare_sample_data.py  train.py
FMCG_EComerce_Market_Research/01_DataTransform/Text_Classifier/src/: data_loader.py  data_module.py  label_handler.py  lightning_module.py  paths.py  training_report.py  utils.py
FMCG_EComerce_Market_Research/01_DataTransform/Text_Classifier/src/models/: classifier.py  embedders.py
Keyword Search Share Tracker Project/: README.md
Keyword_Search_Share_Tracker_Project/: README.md
Logistics & Fintech COD Credit Scoring Model/: README.md
MCN_Shop_Live_Performance_Dashboard/: README.md
Tiktok Creator Discovery Tool/: README.md
(+55 files in other folders)
