[project]
name = "product-text-classifier"
version = "0.1.0"
description = "Embedding-based product text classification for e-commerce tagging"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flagembedding>=1.3.5",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.1",
    "transformers[torch]>=4.53.0",
    "pytorch-lightning",
    "torchmetrics",
    "lightning>=2.5.2",
    "tensorboard>=2.19.0",
]

[project.optional-dependencies]
demo = ["streamlit>=1.30.0"]
